add box1: KOA2 中间件机制实现、路由处理、错误处理、模版引擎、源码

--- a/_posts/Node/2025-02-24- KOA2 中间件机制实现、路由处理、错误处理、模版引擎、源码.md
+++ b/_posts/Node/2025-02-24- KOA2 中间件机制实现、路由处理、错误处理、模版引擎、源码.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     KOA2
+title:     KOA2 中间件机制实现、路由处理、错误处理、模版引擎、源码
 subtitle:  
 date:       2025-02-24
 author:     
@@ -13,7 +13,171 @@ typora-root-url: ..
 
 
 
-# KOA2
+# KOA2 中间件机制实现、路由处理、错误处理、模版引擎、源码
+
+总结：基于 NodeJS 的 HTTP 中间件框架
+
+- 核心概念
+
+    - 中间件机制：洋葱模型，请求进入应用后，依次进入每个中间件的入栈处理，到达最内层中间件后，再依次经过出栈处理 - 组件组合 compose，借用 async/await 避免回调地狱
+
+        ```js
+        // 单独实现 compose 将 next 自定义
+        async function fn1(ctx, next) {
+            console.log('1')
+            await next();
+            console.log('5')
+        }
+        async function fn2(ctx, next) {
+            console.log('2')
+            await next();
+            console.log('4')
+        }
+        async function fn3(ctx, next) {
+            console.log('3')
+        }
+        function compose(middlewares) {
+            return (ctx, next) => {
+                let index = -1;
+                return dispatch(0);
+        
+                function dispatch(i) {
+                    if (i <= index) { return Promise.reject(new Error('next multiple times')) }
+                    index = i;
+                    let fn = middlewares[i];
+                    if (i === middlewares.length) {
+                        fn = next
+                    }
+                    if (!fn) { return Promise.resolve() }
+                    try {
+                        // 定义 next 函数
+                        const next = () => dispatch(i + 1);
+                        return Promise.resolve(fn(ctx, next))
+                    } catch (e) { return Promise.reject(e) }
+        
+                }
+        
+            };
+        }
+        const ctx = {};
+        compose([fn1, fn2, fn3])(ctx, () => Promise.resolve())
+            .then(() => console.log(11111))
+
+    - 中间件编写：`async (ctx, next) =>{ await next() };`
+
+    - context 上下文对象：封装 req 请求对象、res 响应对象 `ctx.request/ctx.response/ctx.body`
+
+- 路由处理
+
+    - KOA2 本身没有内置路由功能，使用第三方路由模块 koa-router
+
+        ```js
+        router.get('/cat', async (ctx) => {  }) // 路由定义
+
+    - 路由参数处理：路由参数 `ctx.params`，链接参数 `ctx.query`
+
+- 错误处理
+
+    - 全局错误处理中间件
+
+        ```js
+        app.use(async (ctx, next) => {
+            try {
+                await next();
+            } catch (err) {
+                ctx.status = err.statusCode || 500;
+                ctx.body = { error: err.message };
+            }
+        });
+        ```
+
+- 模版引擎 - 在服务端生成动态 HTML
+
+    - ejs模版引擎 <% %>：适合复杂模版，性能弱 - 需要动态解析、执行 js 
+    - art-template模版引擎：{{}}，性能好 - 预编译技术，直接执行 js
+
+- 其他一些配置
+
+    - koa-bodyparser：获取 post 提交的数据 `app.use( bodyParser() )`
+    - koa-static：静态资源托管 `app.use( static(__dirname +'public') )`
+    - ctx.cookies：设置 cookie `ctx.cookies.set(key, value, options)/ctx.cookies.get(key)`
+    - koa-session：在服务端上存储客户端状态，`app.use(session(CONFIG, app))` + `ctx.session.key`
+
+- 源码实现两件事：① 封装 http 包，通过 get set 简化 API 方法 ② 引入中间件机制/洋葱模型
+
+    ```js
+    const http = require('http');
+    class KOA2 {
+        constructor() { this.middlewares = [] } // 初始化中间件数组
+        listen(...args) { // 创建一个 http 服务器
+            const server = http.createServer(this.callback()); // 传入回调函数
+            return server.listen(...args); // 启动服务
+        }
+        use(fn) { this.middlewares.push(fn); return this; } // 用于注册中间件
+        callback() { // 返回一个处理请求的回调函数
+            const fn = compose(this.middlewares); // 组合中间件 - 组合成一个函数
+            const handleRequest = (req, res) => {
+                const ctx = this.createContext(req, res); // 创建上下文对象
+                return this.handleRequest(ctx, fn); // 处理请求
+            }
+            return handleRequest
+        }
+        createContext(req, res) { // 创建上下文对象的方法, this 上的值是导入其他三个文件所得
+            const ctx = Object.create(this.context);
+            ctx.request = Object.create(this.request);
+            ctx.response = Object.create(this.response);
+            ctx.req = ctx.request.req = req; // 将 req res 挂载到 ctx 上
+            ctx.res = ctx.response.res = res;
+            return ctx;
+        }
+        handleRequest(ctx, fnMiddleware) { // 调用组合后的中间件函数
+            return fnMiddleware(ctx)
+                .then(() => respond(ctx)) // 中间件处理完后，调用 respond 响应
+                .catch((err) => ctx.onerror(err));
+        }
+    }
+    function respond(ctx) { // 响应处理函数
+        const res = ctx.res;
+        let body = ctx.body;
+        const code = ctx.status;
+    
+        res.statusCode = code; // 状态码
+        res.end(body); // 结束响应
+    }
+    
+    // 将中间件函数组合成一个函数，实现中间件的洋葱模型
+    function compose(middlewares) {
+        return (ctx, next) => {
+            let index = -1; // 记录当前执行的中间件的索引
+            return dispatch(0); // 从第一个中间件开始执行
+    
+            // 递归
+            function dispatch(i) {
+                // 防止 next 函数被多次调用
+                if(i<=index) { return Promise.reject(new Error('next multipletimes')) }
+                // 更新 index 和中间件 fn
+                index = i;
+                let fn = middlewares[i];
+                // 最后一个中间件之后，将 fn 设置为 next
+                if(i === middlewares.length) { fn = next }
+                // 处理没有中间件的情况
+                if (!fn) { return Promise.resolve() }
+                try{
+                    // 执行中间件函数 next 还可以写成 dispatch.bind(null, i+1)
+                    return Promise.resolve( fn(ctx, () => dispatch(i+1)) )
+                } catch(e) { return Promise.reject(e) }
+            }
+            function next() {
+                return dispatch(i + 1);
+            }
+        };
+    }
+    module.exports = KOA2;
+    ```
+
+    
+
+
 
 ### 为什么要看KOA2
 
@@ -97,7 +261,8 @@ ctx = {
 
 ```js
 // 路由实现方式 - 引入并实例化 router.METHOD(PATH, HANDLER)
-const router = require('koa-router')();   //【关键】
+const Router = require('koa-router');
+const router = new Router();   //【关键】
 router.get('/star', async (ctx) => {
     ctx.body = 'hello 千玺'; // 相当于 res.writeHead()
 })
@@ -138,7 +303,7 @@ router.get('/star/:id', async (ctx) => {
 ```js
 const mid = async (ctx, next) => { // ctx 上下文对象 next 下一个中间件
     // 来到中间件，洋葱圈左边
-    next(); // 进入其他中间件
+    await next(); // 进入其他中间件
     // 再次来到中间件，洋葱圈右边
 }
 // 最内层的中间件处理完请求后，会将控制权返回给上一个中间件
@@ -224,9 +389,10 @@ router.get('/add',async (ctx)=>{
         title // 可以将数据渲染到对应静态页面 views/index.ejs 上的 title 变量
     }) 
 })
+```
 
-// 补充 views/index.ejs 中的代码
-<h1><%=title%></h1>
+```html
+<h1><%=title%></h1> <!-- 补充 views/index.ejs 中的代码 -->
 ```
 
 补充一些 ejs 的设定
