add box1: NextJS 客户端组件 服务器组件认知 + 调整预渲染认知

--- a/_posts/2024-12-26-项目进展.md
+++ b/_posts/2024-12-26-项目进展.md
@@ -183,3 +183,15 @@ http://codingwithalice.top:3000/
 ##### 2025.2.18 进展
 
 - J-Table 也部署到线上
+
+##### 2025.2.26 进展
+
+配置 nginx ，方便不携带端口访问 - 在 NextJS 项目中添加 nginx 配置
+
+- http://codingwithalice.top/ 可以直接访问
+
+```js
+// 使用 docker-compose
+sudo docker pull nginx // 安装 nginx
+```
+
