--- a/_posts/Node/2025-01-12-Nextjs 学习笔记.md
+++ b/_posts/Node/2025-01-12-Nextjs 学习笔记.md
@@ -28,9 +28,11 @@ typora-root-url: ..
 - 5、预渲染
     - SSG 静态页面生成：getStaticPaths 被改为 generateStaticParams + revalidate - 在构建时生成 HTML + `export const revalidate` 增量静态再生
         - 增量静态再生 (ISR)：运行时 生成或更新 静态页面的能力，能更新动态内容而无需重新构建 - revalidate 配置页面的「重新验证时间」，到点儿后在运行时生成页面，实现静态页面的增量更新
-
+        - 补充：revalidate 主要适用于服务器组件，而不适用于客户端组件 - 这一过程是在服务器端完成的
+        
     - SSR 服务端渲染：getServerSideProps - 每次请求时在服务端运行得到「html并嵌入拉取到的动态数据」 -> 返回需要的 HTML + 所需的js代码
-
+        - 补充：只适用于旧的路由系统，当前 NextJS 默认为服务器组件做预渲染
+    
 - 6、API Router 
 
 
@@ -166,7 +168,7 @@ export default Blog
 
 #### 四、客户端渲染
 
-如果不需要预渲染，则可以采用客户端渲染 - 可以组合采用「静态生成(预渲染)不需要数据的部分 + 请求时，在客户端 js 请求拿到数据后再渲染」
+如果不需要预渲染，则可以采用客户端渲染 - 可以组合采用「在服务端静态生成(预渲染)不需要数据的部分 + 请求时，在客户端 js 请求拿到数据后再渲染」
 
 
 
