add box1:  Express VS KOA2

--- a/_posts/Node/2025-2-25-Express.md
+++ b/_posts/Node/2025-2-25-Express.md
@@ -19,16 +19,22 @@ Node 框架，提供了路由系统、渲染引擎、中间件（[Express 团队
 
 Node 是一个单线程事件驱动的执行环境。
 
-- Node 和 Express 的 回调协议：[错误优先回调](https://fredkschott.com/post/2014/03/understanding-error-first-callbacks-in-node-js/) - 回调函数的第一个参数是错误值，而后续的参数包含成功数据
+- Node 和 Express 的 通用异步回调协议：[错误优先回调](https://fredkschott.com/post/2014/03/understanding-error-first-callbacks-in-node-js/) - 一种广泛使用的编程模式，回调函数的第一个参数是错误值，而后续的参数包含成功数据
 
     ```js
+    // 异步操作
     fs.readFile('/foo.txt', function(err, data) { // 读取文件
-        if(err) {
+        if(err) { // 如果没有发生错误，err 即为 null/undefined
             console.log('Unknown Error');
             return;
         }
         console.log(data);
     });
+    ```
+
+- 中间件函数通常接受三个参数：`(req,  res, next) => {}`
+
+- 特殊中间件 - 错误处理中间件：`(err, req, res, next) => {}`
 
 ## 1、初始化
 
