add: deepseek 接入项目复盘 + 不明文密码处理

--- a/_posts/2024-12-26-项目进展.md
+++ b/_posts/2024-12-26-项目进展.md
@@ -15,17 +15,42 @@ typora-root-url: ..
 
 # 项目进展
 
-[J-Table](https://github.com/CodingWithAlice/J-Table)
+LTN工具 [J-Table ](https://github.com/CodingWithAlice/J-Table)
 
 - 规划表
 - LTN 盒子工具：记录每题做题时间 + 提示下次做题时间
 
- [Next_Pro](https://github.com/CodingWithAlice/Next_Pro) ： Nextjs + API Route + Sequelize + MySQL + Mongodb
+复盘工具 [Next_Pro](https://github.com/CodingWithAlice/Next_Pro)  
 
--	日报✅、周报、月报、季报
+-	Nextjs + API Route + Sequelize + MySQL + Mongodb
+
+-	日报✅、周报✅、月报✅、季报✅
 -	阅读、影视化相关日报中：想要实现【一句之诗】，每天把喷涌的思考，汇总成一句话
 
 
+
+拥抱 AI，当前规划需要实现的功能
+
+- 内容
+
+    - 月报 - 回顾总结 - 前端、回顾总结 - 其他
+
+    - 后续跟进其他推荐
+        - 周报 - 下周主要学习的内容、前端概况、做得棒的地方、可以做得更好的地方、睡眠情况、运动情况、电影、TED主题、阅读情况
+
+- 目标：利用 AI 给出可能性 -> 减少人工比较带来的基础工作，当前周报一般耗时1h，期望减少一半时长
+
+
+
+> 以下为 集成 deepseek 入网站过程记录
+
+##### 2025.02.28
+
+- Next_Pro 调通本地的 AI 调用提示 月报总结信息
+
+
+
+> 以下为 2025.1.15 - 2025.2.26 记录的复盘工具、LTN工具开发、部署上线过程
 
 ##### 2025.1.15 进展
 
