--- a/_posts/2024-12-26-项目进展.md
+++ b/_posts/2024-12-26-项目进展.md
@@ -15,6 +15,8 @@ typora-root-url: ..
 
 # 项目进展
 
+#### 一、功能
+
 LTN工具 [J-Table ](https://github.com/CodingWithAlice/J-Table)
 
 - 规划表
@@ -27,7 +29,7 @@ LTN工具 [J-Table ](https://github.com/CodingWithAlice/J-Table)
 -	日报✅、周报✅、月报✅、季报✅
 -	阅读、影视化相关日报中：想要实现【一句之诗】，每天把喷涌的思考，汇总成一句话
 
-
+#### 二、AI
 
 拥抱 AI，当前规划需要实现的功能
 
@@ -40,15 +42,35 @@ LTN工具 [J-Table ](https://github.com/CodingWithAlice/J-Table)
 
 - 目标：利用 AI 给出可能性 -> 减少人工比较带来的基础工作，当前周报一般耗时1h，期望减少一半时长
 
+#### 三、AI changeLog
+
+> 以下为 集成 deepseek 接入网站过程记录
+
+##### 2025.03.04
+
+- 将服务器 docker 数据迁移到数据盘
+    - 首先要停止 Docker 服务，然后将`/var/lib/docker`目录下的数据备份并迁移到数据盘的合适位置。接着修改 Docker 的配置文件，一般在`/etc/docker/daemon.json`中添加或修改`"data-root": "/test"`，指定新的数据目录。最后启动 Docker 服务，检查是否正常运行，并且数据是否正确存储在新的位置
+- J-Table 添加权限校验 - 守卫
+- nginx 配置处理 `http://codingwithalice.top:4001`
 
 
-> 以下为 集成 deepseek 入网站过程记录
+
+##### 2025.03.02
+
+- Next_pro 的所有后端接口，添加权限校验 - 全局中间件
+
+##### 2025.03.01
+
+- Next_pro 的 `DEEPSEEK_API_KEY` 存储在服务器 config.env 中统一管理
+- Next_pro 的 deepseek 的 AI 提示语存储在 config.env 中
 
 ##### 2025.02.28
 
 - Next_Pro 调通本地的 AI 调用提示 月报总结信息
 
 
+
+#### 四、功能 changeLog
 
 > 以下为 2025.1.15 - 2025.2.26 记录的复盘工具、LTN工具开发、部署上线过程
 
