fix: Nestjs 各组件的比较总结

--- a/_posts/Node/2025-02-24- KOA2 中间件机制实现、路由处理、错误处理、模版引擎、源码.md
+++ b/_posts/Node/2025-02-24- KOA2 中间件机制实现、路由处理、错误处理、模版引擎、源码.md
@@ -22,27 +22,18 @@ typora-root-url: ..
     - 中间件机制：洋葱模型，请求进入应用后，依次进入每个中间件的入栈处理，到达最内层中间件后，再依次经过出栈处理 - 组件组合 compose，借用 async/await 避免回调地狱
 
         ```js
-        // 单独实现 compose 将 next 自定义
-        async function fn1(ctx, next) {
-            console.log('1')
-            await next();
-            console.log('5')
-        }
-        async function fn2(ctx, next) {
-            console.log('2')
-            await next();
-            console.log('4')
-        }
-        async function fn3(ctx, next) {
-            console.log('3')
-        }
+        async function fn1(ctx, next) { console.log('1');await next(); console.log('5')}
+        async function fn2(ctx, next) { console.log('2');await next(); console.log('4')}
+        async function fn3(ctx, next) { console.log('3') }
         function compose(middlewares) {
             return (ctx, next) => {
                 let index = -1;
                 return dispatch(0);
         
                 function dispatch(i) {
-                    if (i <= index) { return Promise.reject(new Error('next multiple times')) }
+                    if (i <= index) { 
+                        return Promise.reject(new Error('next multiple times')) 
+                    }
                     index = i;
                     let fn = middlewares[i];
                     if (i === middlewares.length) {
@@ -51,12 +42,12 @@ typora-root-url: ..
                     if (!fn) { return Promise.resolve() }
                     try {
                         // 定义 next 函数
-                        const next = () => dispatch(i + 1);
-                        return Promise.resolve(fn(ctx, next))
-                    } catch (e) { return Promise.reject(e) }
-        
+                        const nextFunc = () => dispatch(i + 1);
+                        return Promise.resolve(fn(ctx, nextFunc))
+                    } catch (e) { 
+                        return Promise.reject(e) 
+                    }
                 }
-        
             };
         }
         const ctx = {};
@@ -94,7 +85,7 @@ typora-root-url: ..
 - 模版引擎 - 在服务端生成动态 HTML
 
     - ejs模版引擎 <% %>：适合复杂模版，性能弱 - 需要动态解析、执行 js 
-    - art-template模版引擎：{{}}，性能好 - 预编译技术，直接执行 js
+    - art-template模版引擎：`{{}}`，性能好 - 预编译技术，直接执行 js
 
 - 其他一些配置
 
