--- a/_posts/Node/2025-1-18-Nestjs 核心特性、基本概念、生命周期、获取请求和响应、不同组件的实现和执行顺序.md
+++ b/_posts/Node/2025-1-18-Nestjs 核心特性、基本概念、生命周期、获取请求和响应、不同组件的实现和执行顺序.md
@@ -42,20 +42,18 @@ typora-root-url: ..
     - 2、@Body、@Guery：开箱即用
     - 3、@Param：动态路由参数
 - 不同组件的执行顺序：中间件(全局请求的预处理) -> 守卫(权限验证) -> 拦截器（请求阶段-灵活拦截和阻拦） -> 管道(输入参数的转换和验证) -> 控制器处理程序 -> 拦截器（响应阶段）
-    - 中间件：可以访问原生请求和响应，在请求 **进入NestJS 路由系统之前** 进行一些全局处理，例如日志记录、请求验证、请求解析、跨域处理等
-        - 实现：①函数中间件 `logger(req, res, next)`  ②类 `...implements NestMiddleware{use(req, res, next){}}`
-        - 配置：①模块：xxx.module.ts 中 `...implements NestModule{configure(consumer){}}` ②全局：在main.ts中 app.use()
-    - 守卫：主要用于 **权限验证**，决定请求是否可以继续处理
-        - 实现：`...implements CanActivate{canActivate(context){}}` 返回布尔值/可解析为布尔值的Promise
-        - 配置：①控制器/路由方法上 `@UseGuards(类/实例) `②全局 app.useGlobalGuards / useClass
-    - 拦截器(请求阶段)：在请求 **到达控制器处理程序之前** 进行拦截和处理，例如添加额外的请求头、修改请求参数等
-        - 实现：`...implements NestInterceptor{intercept(context, next){}}`
-        - 配置：①控制器/路由方法上 `@UseInterceptors(类/实例) `②全局 app.useGlobalInterceptors / useClass
-    - 管道：对 **控制器处理程序的输入参数** 进行转换和验证，验证路由参数、查询字符串参数、请求体格式等
-        - 实现：①内置管道9个：6个 Parse* 管道 ②自定义管道 - 返回的值完全覆盖原值 `...implements PipeTransform<T, R>{transform(value: T, metadata):R{}}`
-        - 配置：①在控制器的路由方法内，作为参数传入 @Param/Query(‘property’, 多个类/实例) @Body(类/实例) ②在控制器的路由方法上`@UsePipes(类/实例) `②全局 app.useGlobalPipes / useClass
-    - 控制器处理程序：业务代码
-    - 拦截器(响应阶段)：对响应数据进行拦截和处理，例如统一响应格式、日志记录等
+    - 全局配置 app.use* 方式 - 在 main.ts 中引入配置 app.use*(类/实例)
+    - 全局配置 useClass 方式 - 在 `app.module.ts` 配置 @Module 的配置参数 `providers` 声明令牌和类` [{ provide: API_*, useClass: 类 }]`
+    - 控制器范围配置 @Use* 方式  - 在 `*.controler.ts` 的路由方法 @Use*(类/实例)
+
+| 组件(按序)       | 功能                                                         | 时机                         | 实现                                                         | 配置                                                         |
+| ---------------- | ------------------------------------------------------------ | ---------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 中间件           | 全局请求的预处理，可以访问原生请求和响应，日志记录、请求验证、请求解析、跨域处理 | 在请求进入NestJS路由系统之前 | ①函数中间件`logger(req,res,next)`<br />②类`...implements NestMiddleware{ use(req,res,next){}}` | ①全局配置 app.use 方式<br/>②模块 - 在` *.module.ts `导出类 `...implements NestModule{configure(consumer){}}` |
+| 守卫             | 权限验证，决定请求是否可以继续处理                           |                              | 类`...implements CanActivate{ canActivate(context){}}`返回布尔值/可以解析为布尔的Promise | ①全局配置 app.use* 方式  - `app.useGlobalGuards`<br/>全局配置 useClass 方式<br/>②控制器范围配置 @Use* 方式 - `@UseGards` |
+| 拦截器(请求阶段) | 添加额外的请求头、修改请求参数等                             | 请求到达控制器处理程序之前   | 类`...implements NestInterceptor{ intercept(ctx, next){} }`  | ①全局配置 app.use* 方式 - `app.useGlobalInterceptors `<br />全局配置 useClass 方式<br/>②控制器范围配置 @Use* 方式 - `@UseInterceptors` |
+| 管道             | 对 **控制器处理程序的输入参数** 进行转换和验证，验证路由参数、查询字符串参数、请求体格式等 |                              | ①内置管道9个：6个 Parse* 管道 <br /> ②自定义管道 - 返回的值完全覆盖原值 `...implements PipeTransform<T, R>{transform(value: T, metadata):R{}}` | ①全局配置 app.use* 方式 - `app.useGlobalPipes` <br />全局配置 useClass 方式<br />②控制器范围配置 @Use* 方式  - `@UsePipes`<br />③路由处理函数 - 在参数处理中使用管道 `@Query/Param('property', 多个类/实例)` `@Body(类/实例)` |
+| 控制器处理程序   | 业务代码                                                     |                              |                                                              |                                                              |
+| 拦截器(响应阶段) | 对响应数据进行拦截和处理，例如统一响应格式、日志记录         |                              |                                                              |                                                              |
 
 
 
