add: docker-服务器数据盘迁移

--- a/_posts/AI/2025-03-01-服务器 不明文密码处理.md
+++ b/_posts/AI/2025-03-01-服务器 不明文密码处理.md
@@ -15,6 +15,15 @@ typora-root-url: ..
 
 # 服务器 不明文密码处理
 
+总计：
+
+- ① dotenv 零依赖的 Node.js 模块，主要作用是将环境变量从 .env 文件加载到 process.env 中
+- ② 调用 dotenv.config() 方法即可加载环境变量 `dotenv.config({ path: '../config.env' }); // /config.env`
+- ③ 项目外部的文件引入时，如果使用的是 docker，一定要在配置文件中将宿主机上的文件保存到容器中 `volumes: - ../config.env:/config.env `
+- ④后续使用直接调用即可 `process.env.CHECK_AUTH`
+
+
+
 ### deepseek 密码处理
 
 1、在服务器添加文件来保存密码
@@ -52,11 +61,10 @@ volumes:
  【step2：next.config.ts 文件配置 env】
 
 ```js
-// next.config.ts
 import dotenv from 'dotenv';
 // dotenv.config({ path: '../config.env' }); 路径：/config.env
 dotenv.config({ path: path.resolve(__dirname, './config.env') }) // 路径：/app/config.env 
-// 声明 env
+
 export default {
     env: {
 		DEEPSEEK_API_KEY: process.env.DEEPSEEK_API_KEY,
