add box1: Promise 的异步任务并发函数

--- a/_posts/算法、刷题/2024-12-5-模拟实现promise.md
+++ b/_posts/算法、刷题/2024-12-5-模拟实现promise.md
@@ -173,21 +173,58 @@ MyPromise.reject = function (reason) {
 // 8 - 返回一个 promise，都resolve则返回结果数组；有一个reject，则返回reject原因
 MyPromise.all = function (arr) {
     return new MyPromise((resolve, reject) => {
-        arr.reduce((pre, cur, index) => {
-            cur.then((res) => {
-                pre.push(res);
-                index + 1 === arr.length && resolve(pre)
-            }, reject);
-            return pre;
-        }, []);
+        if (arr.length === 0) { resolve([]); return; } // arr 为空数组时，forEach 不会执行
+        const results = new Array(arr.length);
+        let completedCount = 0; // 计数器
+        arr.forEach((it, index) => { // 遍历所有 promises
+            MyPromise.resolve(it).then((res) => {
+                results[index] = res;
+                completedCount++;
+                if (completedCount === arr.length) { resolve(results) } // 返回结果
+            }).catch(reject);
+        });
     });
-}
+};
 
 MyPromise.race = function (arr) {
     return new MyPromise((resolve, reject) => {
-        arr.forEach(it => MyPromise1.resolve(it).then(resolve, reject))
+        arr.forEach(it => MyPromise.resolve(it).then(resolve).catch(reject))
     });
-}
+};
+
+MyPromise.allSettled = function (arr) {
+    return new MyPromise((resolve) => {
+        const results = [];
+        let completedCount = 0;
+        if (arr.length === 0) { resolve([]); return; } // arr 为空数组时
+        arr.forEach((promise, index) => {
+            MyPromise.resolve(promise).then((value) => {
+                results[index] = { status: 'fulfilled', value };
+            }).catch((reason) => {
+                results[index] = { status: 'rejected', reason };
+            }).finally(() => {
+                completedCount++;
+                if (completedCount === arr.length) { resolve(results) }  // 返回结果
+            });
+        });
+    });
+};
+
+const getErr = (info) => new AggregateError(info, 'All promises were rejected');
+MyPromise.any = function (arr) {
+    return new MyPromise((resolve, reject) => {
+        const errors = [];
+        let count = 0;
+        if (arr.length === 0) { reject(getErr([])); return; }
+        arr.forEach((promise, index) => {
+            MyPromise.resolve(promise).then(resolve).catch((error) => {
+                errors[index] = error;
+                count++;
+                if (count === arr.length) { reject(getErr(errors));}
+            });
+        });
+    });
+};
 ```
 
 ```js
