fix: 补充 http response 的 Express KOA2 的比较

--- a/_posts/Node/2025-02-24- KOA2 中间件机制实现、路由处理、错误处理、模版引擎、源码.md
+++ b/_posts/Node/2025-02-24- KOA2 中间件机制实现、路由处理、错误处理、模版引擎、源码.md
@@ -17,6 +17,65 @@ typora-root-url: ..
 
 总结：基于 NodeJS 的 HTTP 中间件框架
 
+- 常见错误
+
+    - 中间件-洋葱模型 中传入空数组，要返回兑现的promise
+
+        ```js
+        if(!fn) { return Promise.resolve() } // 不要忘记处理这个边界情况
+        ```
+
+    - 中间件-洋葱模型 中执行中间件要包裹promise 
+
+        ```js
+        rerurn Promise.resolve( fn(ctx, nextFunc) ) // 返回的值使用 Promise.resolve 包裹
+
+    - 路由处理时 router 要调用 methods 
+
+        ```js
+        router.get('/cat', async (ctx) => {}) // 记得要调用 methods 来声明
+        ```
+
+    - 全局错误中间件，KOA2 **使用 ctx 包装了req和res**，错误的抛出是在 **ctx.status 和 ctx.body 上**
+
+        ```js
+        app.use(async (ctx, next) => {
+            try{ await next() } catch(e) {
+                ctx.status = 500;
+                ctx.body = { error: '错误' }
+                // 经常错写成为 ctx.res.send() - 写法没错，但是不推荐
+            }
+        })
+        ```
+
+    - 源码实现中 callback需要返回一个函数
+
+        ```js
+        // 1、callback 需要返回一个函数：先获取 ctx 上下文，触发执行中间件 
+        return (req, res) => {
+            const ctx = this.createContext(req, res);
+            // 2、中间件的执行需要传入 ctx
+        	return fnMiddleware(ctx)
+            	// 3、respond需要传递的数据在 ctx 上，不需要明文传递 
+                .then(() => respond(ctx))
+        	    // 4、要记得 catch 错误，错误在 ctx 上处理
+                .catch((err) => ctx.onerror(err)); 
+            }
+        // 5、createContext(req, res) 挂载的是 ctx ctx.request 上
+        ctx.req = ctx.request.req = req; 
+        ctx.res = ctx.response.res = res;
+        // 6、respond(ctx) 响应数据在 ctx.body 上 
+        ctx.res.statusCode = ctx.status; 
+        // ctx.res.statusCode 是Node原生的http.ServerResponse对象,直接操作原生响应对象的状态码属性
+        // ctx.status 是 KOA 封装的上下文，便捷属性，会映射到 ctx.res.statusCode
+        ctx.res.end(ctx.body);
+        // ctx.res.end 是 Node.js 原生的 http.ServerResponse 对象,用于结束响应并发送数据
+        // ctx.res.send 是错误的写法，send() 方法通常是 Express 框架中响应对象的方法
+        // ctx.body 是 KOA 用于设置响应体的方法
+        ```
+
+        
+
 - 核心概念
 
     - 中间件机制：洋葱模型，请求进入应用后，依次进入每个中间件的入栈处理，到达最内层中间件后，再依次经过出栈处理 - 组件组合 compose，借用 async/await 避免回调地狱
@@ -43,6 +102,7 @@ typora-root-url: ..
                     try {
                         // 定义 next 函数
                         const nextFunc = () => dispatch(i + 1);
+                        // 执行中间件函数 nextFunc 还可以写成 dispatch.bind(null, i+1)
                         return Promise.resolve(fn(ctx, nextFunc))
                     } catch (e) { 
                         return Promise.reject(e) 
@@ -127,45 +187,17 @@ typora-root-url: ..
                 .catch((err) => ctx.onerror(err));
         }
     }
-    function respond(ctx) { // 响应处理函数
-        const res = ctx.res;
-        let body = ctx.body;
-        const code = ctx.status;
-    
-        res.statusCode = code; // 状态码
-        res.end(body); // 结束响应
+    function respond(ctx) {
+        // 发送响应 -  根据ctx.body的类型和ctx.status的值自动进行一些响应头的设置和响应体的处理，从而完成响应的发送 - 通过 Node 的http模块将响应发送给客户端
+        ctx.res.statusCode = ctx.status;
+        ctx.res.end(ctx.body);
     }
     
     // 将中间件函数组合成一个函数，实现中间件的洋葱模型
-    function compose(middlewares) {
-        return (ctx, next) => {
-            let index = -1; // 记录当前执行的中间件的索引
-            return dispatch(0); // 从第一个中间件开始执行
-    
-            // 递归
-            function dispatch(i) {
-                // 防止 next 函数被多次调用
-                if(i<=index) { return Promise.reject(new Error('next multipletimes')) }
-                // 更新 index 和中间件 fn
-                index = i;
-                let fn = middlewares[i];
-                // 最后一个中间件之后，将 fn 设置为 next
-                if(i === middlewares.length) { fn = next }
-                // 处理没有中间件的情况
-                if (!fn) { return Promise.resolve() }
-                try{
-                    // 执行中间件函数 next 还可以写成 dispatch.bind(null, i+1)
-                    return Promise.resolve( fn(ctx, () => dispatch(i+1)) )
-                } catch(e) { return Promise.reject(e) }
-            }
-            function next() {
-                return dispatch(i + 1);
-            }
-        };
-    }
+    function compose(middlewares) {}
     module.exports = KOA2;
     ```
-
+    
     
 
 
@@ -674,21 +706,7 @@ class Application extends Emitter {
         this.middlewares.push(middleware);
     },
     compose(middlewares) {
-        return function(ctx) { // 传⼊上下⽂
-            return dispatch(0);
-            function dispatch(i) {
-                let fn = middlewares[i];
-                if (!fn) {
-                    return Promise.resolve();
-                }
-                return Promise.resolve(
-                    // 将上下⽂传⼊中间件，mid(ctx,next)
-                    fn(ctx, function next() {
-                        return dispatch(i + 1);
-                    })
-                );
-            }
-        };
+        // 看上文
     }
 }
 ```
