--- a/_posts/Node/2025-1-18-Nestjs 核心特性、基本概念、生命周期、获取请求和响应、不同组件的实现和执行顺序.md
+++ b/_posts/Node/2025-1-18-Nestjs 核心特性、基本概念、生命周期、获取请求和响应、不同组件的实现和执行顺序.md
@@ -48,7 +48,7 @@ typora-root-url: ..
 
 | 组件(按序)       | 功能                                                         | 时机                         | 实现                                                         | 配置                                                         |
 | ---------------- | ------------------------------------------------------------ | ---------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| 中间件           | 全局请求的预处理，可以访问原生请求和响应，日志记录、请求验证、请求解析、跨域处理 | 在请求进入NestJS路由系统之前 | ①函数中间件`logger(req,res,next)`<br />②类`...implements NestMiddleware{ use(req,res,next){}}` | ①全局配置 app.use 方式<br/>②模块 - 在` *.module.ts `导出类 `...implements NestModule{configure(consumer){}}` |
+| 中间件           | 全局请求的预处理，可以访问原生请求和响应，日志记录、请求验证、请求解析、跨域处理 | 在请求进入NestJS路由系统之前 | ①函数中间件`logger(req,res,next)`<br />②类`...implements NestMiddleware{ use(req,res,next){}}` | ①全局配置 app.use 方式<br/>②模块 - 在` *.module.ts `导出类 `...implements NestModule{configure(consumer){consumer.apply(Logger).forRoutes('cats');}}` |
 | 守卫             | 权限验证，决定请求是否可以继续处理                           |                              | 类`...implements CanActivate{ canActivate(context){}}`返回布尔值/可以解析为布尔的Promise | ①全局配置 app.use* 方式  - `app.useGlobalGuards`<br/>全局配置 useClass 方式<br/>②控制器范围配置 @Use* 方式 - `@UseGards` |
 | 拦截器(请求阶段) | 添加额外的请求头、修改请求参数等                             | 请求到达控制器处理程序之前   | 类`...implements NestInterceptor{ intercept(ctx, next){} }`  | ①全局配置 app.use* 方式 - `app.useGlobalInterceptors `<br />全局配置 useClass 方式<br/>②控制器范围配置 @Use* 方式 - `@UseInterceptors` |
 | 管道             | 对 **控制器处理程序的输入参数** 进行转换和验证，验证路由参数、查询字符串参数、请求体格式等 |                              | ①内置管道9个：6个 Parse* 管道 <br /> ②自定义管道 - 返回的值完全覆盖原值 `...implements PipeTransform<T, R>{transform(value: T, metadata):R{}}` | ①全局配置 app.use* 方式 - `app.useGlobalPipes` <br />全局配置 useClass 方式<br />②控制器范围配置 @Use* 方式  - `@UsePipes`<br />③路由处理函数 - 在参数处理中使用管道 `@Query/Param('property', 多个类/实例)` `@Body(类/实例)` |
