--- a/_posts/浏览器原理相关内容/2021-04-09-05-3 白屏优化 - 首次加载.md
+++ b/_posts/浏览器原理相关内容/2021-04-09-05-3 白屏优化 - 首次加载.md
@@ -53,5 +53,5 @@ typora-root-url: ..
             -  有 `async` 标签的 js - js 的加载和 html 的解析和渲染并行，加载完即执行
             -  有 `defer` 标签的 js - js的加载和 html 的解析和渲染并行，但会在 html 解析完成后执行，在触发 `DOMContentLoaded` 事件前执行
 - 4、**减少文件大小**：比如通过 webpack 等工具移除一些不必要的注释，并压缩 JavaScript 文件
-- 5、减少 HTTP 请求次数和请求大小
+- 5、减少 HTTP 请求次数和请求大小、利用缓存
 
