add box1: 01 浏览器进程组成 + 复用渲染进程 + 进程/线程

--- a/_posts/浏览器原理相关内容/2021-04-06-01 浏览器进程.md
+++ b/_posts/浏览器原理相关内容/2021-04-06-01 浏览器进程.md
@@ -11,17 +11,55 @@ tags:
 typora-root-url: ..
 ---
 
+# 01 浏览器进程组成 + 复用渲染进程 + 进程/线程
 
-# 01 浏览器进程
+总结：
 
-Chrome打开一个页面需要启动多少进程？4个
+- 多进程浏览器：包括**1个浏览器（Browser）主进程、1个 GPU 进程、1个网络进程、多个渲染进程和多个插件进程**
+
+- 默认情况下，**Chrome会为每个Tab标签创建一个渲染进程**。（同源：同协议、同域名、同端口『<u>相同站点，复用进程</u>』）
+
+- 进程适合用于需要独立运行和资源隔离的场景，如不同的应用程序；而线程适合用于在一个应用程序内部实现多个并发的任务，以提高程序的执行效率和响应性
+
+    - **进程**
+        - 定义：一个程序的运行实例
+        - 资源分配：每个进程都有独立的地址空间、内存、数据栈，不同进程之间的地址空间互相隔离
+        - 进程之间的数据交换：通过进程间通信 IPC 机制，管道、消息队列、共享内存等
+
+    - **线程**
+        - 定义：是进程中的一个实体
+        - 资源分配：共享进程资源，可与属于同一进程的其他线程共享进程的全部资源
+        - 线程之间的数据交换：共享进程资源，需要通过同步机制来协调对共享资源的访问
+
+    补充：线程的同步机制
+
+    - 互斥锁：同一时间只有一个线程能进行写入
+    - 信号量：允许一定数量的线程同时访问共享资源，例如对有限资源的访问 - 数据库连接池最多同时5个
+    - 读写锁：允许多个读线程同时访问共享资源，但在写线程访问时，会阻止其他读线程和写线程的访问 - 读操作之间不互斥，而读写操作和写写操作之间是互斥的，例如配置文件
+
+
+
+### 1、Chrome打开一个页面需要启动多少进程？4个
 
 <img src="/../img/assets_2019/image-20210408215140897.png" alt="image-20210408215140897" style="zoom:30%;" />
 
 <img src="/../img/assets_2019/17242218-87342448f207d785.png" alt="img" style="zoom:63%;" />
 
- #### 进程和线程
-**进程**：一个程序的运行实例。详细解释就是，启动一个程序的时候，操作系统会为该程序创建一块内存，用来存放代码、运行中的数据和一个执行任务的主线程，我们把这样的一个运行环境叫进程。
+ ### 2、进程和线程
+
+进程适合用于需要独立运行和资源隔离的场景，如不同的应用程序；而线程适合用于在一个应用程序内部实现多个并发的任务，以提高程序的执行效率和响应性
+
+- **进程**
+    - 定义：一个程序的运行实例，详细解释就是，启动一个程序的时候，操作系统会为该程序创建一块内存，用来存放代码、运行中的数据和一个执行任务的主线程，我们把这样的一个运行环境叫进程。
+    - 资源分配：每个进程都有独立的地址空间、内存、数据栈，不同进程之间的地址空间互相隔离
+    - 进程之间的数据交换：通过进程间通信 IPC 机制，管道、消息队列、共享内存等
+
+- **线程**
+    - 定义：是进程中的一个实体，是被系统独立调度和分派的基本单位
+    - 资源分配：共享进程资源，线程不拥有系统资源，可与属于同一进程的其他线程共享进程的全部资源
+    - 线程之间的数据交换：共享进程资源，需要通过同步机制来协调对共享资源的访问
+
+
 
 **进程和线程的关系**：进程中使用多线程并行处理能提升运算效率。
 
@@ -36,7 +74,11 @@ Chrome打开一个页面需要启动多少进程？4个
 4. 进程之间的内容相互隔离（进程间可**通信（IPC）机制**）
 
 
-#### 多进程浏览器
+
+
+
+
+### 3、多进程浏览器
 当前浏览器是多进程浏览器：包括**1个浏览器（Browser）主进程、1个 GPU 进程、1个网络进程、多个渲染进程和多个插件进程**（插件进程依据页面依赖而增加）
 
 <img src="/../img/assets_2019/image-20210408215258029.png" alt="image-20210408215258029" style="zoom:30%;" />
