add box1: 二叉树：前中后序、层序遍历-递归/非递归版本、层序遍历、路径和

--- a/_posts/算法、刷题/2025-03-10-js执行优先级 + 测试题.md
+++ b/_posts/算法、刷题/2025-03-10-js执行优先级 + 测试题.md
@@ -16,7 +16,7 @@ typora-root-url: ..
 
 ## js执行优先级 + 测试题
 
-执行优先级由高到低：**小括号(xxx)  >  属性访问.   >  new foo()  >  foo()**
+执行优先级由高到低：**小括号(xxx) > new foo >  属性访问.   >  new foo()  >  foo()**
 
 ```javascript
 function getName(){ console.log(1) }
