--- a/_posts/HTTP相关/2025-03-10 TCP 滑动窗口 VS TCP 排队.md
+++ b/_posts/HTTP相关/2025-03-10 TCP 滑动窗口 VS TCP 排队.md
@@ -15,6 +15,16 @@ typora-root-url: ..
 
 # TCP 滑动窗口 VS TCP 排队
 
+总结：
+
+|          | TCP滑动窗口                                                  | TCP排队+浏览器                                               |
+| -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 影响范围 | 传输层<br /> 影响单个 TCP 上的**数据发送节奏**               | 应用层<br />影响浏览器对特定域名的 **并发请求数量**          |
+| 定义     | 通过接收方反馈的窗口大小 **动态调整发送速率**                | 浏览器对同一个域名同时发起的请求数量进行限制                 |
+| 目标     | 实现 **流量控制**（控制发送方的发送节奏和接收方的接收能力相匹配）、提高传输效率(保证数据的稳定性和高效性) | 优化网络请求和管理(HTTP/1.1的队头阻塞，避免过多请求造成服务器压力) |
+
+
+
 TCP 滑动窗口 和 TCP 排队 互相影响
 
 **TCP 滑动窗口**
@@ -22,7 +32,7 @@ TCP 滑动窗口 和 TCP 排队 互相影响
 - 定义：TCP 协议用于实现 **流量控制** 和 **提高传输效率** 的机制
     - 允许发送方在未收到接收方确认的情况下，根据窗口大小发送多个数据段，通过接收方反馈的窗口大小来 **动态调整发送速率**，确保数据传输的稳定性和高效性
 - 目标：重点在于 **控制发送方的发送节奏与接收方的接收能力相匹配**，避免出现数据发送过快导致接收方处理不过来而丢失数据的情况
-- 影响范围：传输层，主要影响 **单个 TCP 连接上** 的**数据发送节奏**，针对数据传输速度和流量控制
+- 影响范围：传输层，主要影响 **单个 TCP 连接上** 的**数据发送节奏**
 
 **TCP 排队 + 浏览器请求限制**
 
