fix: 做题修正各种阻力

--- a/_posts/算法、刷题/2024-12-5-模拟实现promise.md
+++ b/_posts/算法、刷题/2024-12-5-模拟实现promise.md
@@ -211,6 +211,7 @@ MyPromise.allSettled = function (arr) {
 };
 
 const getErr = (info) => new AggregateError(info, 'All promises were rejected');
+// any 是任一 resolved 则返回；若没有 resolved 的，则返回一个数组包含所有 reject 原因
 MyPromise.any = function (arr) {
     return new MyPromise((resolve, reject) => {
         const errors = [];
