--- a/_posts/算法、刷题/2025-03-07-p-limit 使用+源码 、100个请求并发请求.md
+++ b/_posts/算法、刷题/2025-03-07-p-limit 使用+源码 、100个请求并发请求.md
@@ -30,18 +30,14 @@ typora-root-url: ..
 import pLimit, { limitFunction } from 'p-limit';
 // 第一种写法
 const limit = pLimit(2); // ①创建一个限制器实例，设置并发限制为 2
-const tasks = Array.from({ length: 5 }, (_, index) =>
-    limit(() => new Promise((resolve) => setTimeout(resolve, 1000, index + 1))
+const tasks1 = Array.from({ length: 5 }, (it, index) =>
+    limit(() => new Promise((resolve) => setTimeout(resolve, index * 100))
 ); // ②创建任务数组：利用 limit 包裹每一个请求，组成数组
-Promise.all(tasks).then((results) => { // ③执行所有任务：Promise.all
-    console.log('All tasks completed:', results);
-});
+Promise.all(tasks1).then((results) => console.log('All:', results) ); // ③执行所有任务
 // 第二种简写法
-const limitedFunction = limitFunction(async () => {
-	return doSomething();
-}, { concurrency: 2 });
-const input = Array.from({length: 10}, limitedFunction);
-Promise.all(input).then(console.log);
+const tasks2 = Array.from({length:20}, (it, index) =>
+    limitFunction(() => new Promise(resolve=>setTimeout(resolve,index)),{concurrency: 2}))
+Promise.all(tasks2).then((results) => console.log('All:', results) );
 ```
 
 #### 2、p-limit 源码
