--- a/_posts/算法、刷题/2025-03-10-js执行优先级 + 测试题.md
+++ b/_posts/算法、刷题/2025-03-10-js执行优先级 + 测试题.md
@@ -16,7 +16,7 @@ typora-root-url: ..
 
 ## js执行优先级 + 测试题
 
-执行优先级由高到低：**小括号(xxx) > new foo >  属性访问.   >  new foo()  >  foo()**
+执行优先级由高到低：**小括号(xxx)  >  属性访问.   > new foo 无参数 >  函数调用foo() > new foo()  带参数**
 
 ```javascript
 function getName(){ console.log(1) }
@@ -28,10 +28,10 @@ Foo.getName = function () { console.log(3) }
 
 var a = new Foo.getName(); 
 // 该行等于 new (Foo.getName)()，3
-// 先 Foo.getName - 再 (Foo.getName)() 输出3 - 最后 new 创建一个新对象赋值给 a={}
+// 先 Foo.getName - 再 new (Foo.getName)()，将 Foo.getName 作为构造函数，打印3 - a={}
 var b = new Foo().getName(); 
-// 该行等于(new Foo()).getName()，2
-// 先 new Foo(),Foo 是构造函数，创建新对象 - 再调用该对象的 getName，没有返回值 - b 为 undefined
+// 该行等于(new Foo()).getName()，打印 2
+// 先 new Foo(),Foo 是构造函数，创建新对象 - 再调用该对象的 getName 执行 - b 为 undefined
 var c = new new Foo().getName(); 
 // 该行等于new (new Foo().getName)()，2
 // 先 new Foo()，创建新对象 - 再获取该对象的getName - new调用这个 getName 创建一个新对象赋值给 c={}
