fix: 添加反柯里化函数实现

--- a/_posts/JS原生基础相关/2021-07-21-柯里化函数  反柯里化函数实现.md
+++ b/_posts/JS原生基础相关/2021-07-21-柯里化函数  反柯里化函数实现.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      柯里化函数实现
+title:      柯里化函数 / 反柯里化函数实现
 subtitle:  
 date:       2021-07-21
 author:     
@@ -11,11 +11,13 @@ tags:
 typora-root-url: ..
 ---
 
-## 柯里化函数实现
+## 柯里化函数 / 反柯里化函数实现
 
-柯里化是把 **接受 <u>多个参数</u> 的函数** 变换成 **接受一个 <u>单一参数</u> 的函数**，并且返回 **接受余下的参数而且返回结果的新函数** 的技术。
+- 柯里化：把 **接受 <u>多个参数</u> 的函数** 变换成 **接受一个 <u>单一参数</u> 的函数**，并且返回 **接受余下的参数而且返回结果的新函数** / 将一个多参数函数转换为一系列单参数函数的过程
 
-常见错误点：让直接实现一个 add(1)(2)(3) 的函数，其实就是柯里化
+    - 别名：部分求值
+
+    - 常见错误点：让直接实现一个 add(1)(2)(3) 的函数，其实就是柯里化
 
 ```js
 // 更简洁、更现代化的方式
@@ -24,6 +26,22 @@ function curry(fun, ...args) {
         return fun(...args)
     } else {
         return (...args2) => curry(fun, ...args, ...args2)
+    }
+}
+```
+
+- 反柯里化：将一个方法从“属于某个对象”转换为 **通用的函数**，使得这个方法可以被其他对象借用
+
+```js
+Function.prototype.uncurrying = function () {
+    var self = this; // 要转化的原型上的函数/调用函数
+    return function() {
+        // 常见写法
+        var obj = Array.prototype.shift.call(arguments); // 调用时的第一个参数
+        return self.apply(obj, arguments);
+        // 另一种写法
+        return Function.prototype.call.apply(self, arguments);
+        // 将 self 作为 Function.prototype.call 的 this 的值，arguments 是参数 - 相当于 self.call(arguments[0], arguments[1], ...)
     }
 }
 ```
