--- a/_posts/算法、刷题/2021-06-29-[69]. x 的平方根.md
+++ b/_posts/算法、刷题/2021-06-29-[69]. x 的平方根.md
@@ -24,7 +24,7 @@ typora-root-url: ..
 ```js
 // 方法一：执行时长稍长，但内存占用小
 function sqrt(x) {
-    const mid = Math.ceil(x/2); // 优化点
+    const mid = Math.floor(x/2) + 1; // 优化点，取 floor
     let i = 0;
     for(; i < mid; i++) {
         if ((i * i <= x) && ((i + 1) * (i + 1) > x)) { // 注意这里要给 = 号，否则会遗漏
@@ -64,9 +64,9 @@ function mySqrt3(x) {
 
 ```js
 var mySqrt = function(x) {
-    const mid = Math.ceil(x/2);
+    const mid = Math.ceil(x/2); // Math.floor
     let i = 0;
-    for(; i < mid; i++) {
+    for(; i < mid; i++) { // i <= mid
         // 注意这里要给 = 号，否则会遗漏
         if ( (i * i <= x) && ((i + 1) * (i + 1) > x)) {
             return i;
