--- a/_posts/算法、刷题/2025-03-10-js执行优先级 + 测试题.md
+++ b/_posts/算法、刷题/2025-03-10-js执行优先级 + 测试题.md
@@ -30,7 +30,7 @@ var a = new Foo.getName();
 // 该行等于 new (Foo.getName)()，3
 // 先 Foo.getName - 再 new (Foo.getName)()，将 Foo.getName 作为构造函数，打印3 - a={}
 var b = new Foo().getName(); 
-// 该行等于(new Foo()).getName()，打印 2
+// .属性调用优先级比 new 构造函数() 高，所以该行等于(new Foo()).getName()，打印 2
 // 先 new Foo(),Foo 是构造函数，创建新对象 - 再调用该对象的 getName 执行 - b 为 undefined
 var c = new new Foo().getName(); 
 // 该行等于new (new Foo().getName)()，2
