add: 《JS设计模式与开发实践》Part1 前三章

--- a/_posts/算法、刷题/2021-07-11-工作 防抖节流.md
+++ b/_posts/算法、刷题/2021-07-11-工作 防抖节流.md
@@ -46,7 +46,7 @@ typora-root-url: ..
 
 ##### 2、函数节流
 
-就是 <u>一直按着技能键</u>，也能在规定时间内发技能
+就是 <u>一直按着技能键</u>，也能在规定时间内发技能 - 解决被触发频率太高的问题
 
 - 节流通常是通过一个 **标记变量和定时器** 来实现，当函数执行后，设置一个定时器，在定时器未结束期间（即未达到规定的时间间隔），再次触发事件时函数不会执行，直到定时器结束，标记变量重置，函数才可以再次执行。
 
@@ -91,7 +91,7 @@ typora-root-url: ..
     - 鼠标不断点击触发，`mousedown` (单位时间内只触发一次)
     - 监听滚动事件，比如是否滑到底部自动加载更多，用 `throttle` 来判断
 
-### 函数防抖(debounce) - 节约开销
+### 一、函数防抖(debounce) - 节约开销
 
 在事件被触发n秒后再执行回调，如果在这n秒内又被触发，则重新计时。
 
@@ -158,7 +158,7 @@ input.addEventListener('keyup', (e) => {
 
 规定在一个单位时间内，只能触发一次函数。**如果这个单位时间内触发多次函数，只有一次生效。**
 
-### 节流
+### 二、节流
 
 ```javascript
 // 在不断输入时，ajax会按照我们设定的时间，每1s执行一次
