--- a/_posts/算法、刷题/2025-03-07-p-limit 使用+源码 、100个请求并发请求.md
+++ b/_posts/算法、刷题/2025-03-07-p-limit 使用+源码 、100个请求并发请求.md
@@ -166,7 +166,27 @@ execute(requests).then(res => {
 })
 ```
 
+—— 分时函数：将操作分批执行
 
+```js
+// 参数说明：array-需要的数据，fun-操作数据的函数，count-数量限制
+function timeChunk(array, fun, count) {
+    let timeId; // 闭包存储起来
+    const start = function() {
+        for(let i = 0; i < Math.min(count || 1, array.length); i++) { // 数量限制
+            fn(array.shift()); // 闪光点：Math.min(count || 1, array.length)
+        }
+    }
+    return () => {
+        timeId = setInterval(() => {
+            if(array.length === 0){ // 全部节点创建完毕
+                return clearInterval(timeId)
+            }
+            start();
+        }, 200) // 分批间隔
+    }
+}
+```
 
 
 
