add box1: 方法的泛化/方法的借用

--- a/_posts/JS原生基础相关/2021-07-21-柯里化函数  反柯里化函数实现.md
+++ b/_posts/JS原生基础相关/2021-07-21-柯里化函数  反柯里化函数实现.md
@@ -30,19 +30,13 @@ function curry(fun, ...args) {
 }
 ```
 
-- 反柯里化：将一个方法从“属于某个对象”转换为 **通用的函数**，使得这个方法可以被其他对象借用
+- 反柯里化：将柯里化后的函数重新转换为一个多参数函数
 
 ```js
-Function.prototype.uncurrying = function () {
-    var self = this; // 要转化的原型上的函数/调用函数
-    return function() {
-        // 常见写法
-        var obj = Array.prototype.shift.call(arguments); // 调用时的第一个参数
-        return self.apply(obj, arguments);
-        // 另一种写法
-        return Function.prototype.call.apply(self, arguments);
-        // 将 self 作为 Function.prototype.call 的 this 的值，arguments 是参数 - 相当于 self.call(arguments[0], arguments[1], ...)
-    }
+function uncurry(fn) {
+    return function (...args) {
+        return args.reduce((pre, cur) => pre(cur), fn); // 递归逐步调用，直到所有参数都被传递
+    };
 }
 ```
 
