add:  添加分时操作函数

--- a/_posts/AI/2025-03-01-服务器 不明文密码处理.md
+++ b/_posts/AI/2025-03-01-服务器 不明文密码处理.md
@@ -18,7 +18,7 @@ typora-root-url: ..
 总计：
 
 - ① dotenv 零依赖的 Node.js 模块，主要作用是将环境变量从 .env 文件加载到 process.env 中
-- ② 调用 dotenv.config() 方法即可加载环境变量 `dotenv.config({ path: '../config.env' }); // /config.env`
+- ② 调用 dotenv.config() 方法即可加载环境变量 `dotenv.config({ path: path.resolve(_dirname, './config') })`
 - ③ 项目外部的文件引入时，如果使用的是 docker，一定要在配置文件中将宿主机上的文件保存到容器中 `volumes: - ../config.env:/config.env `
 - ④后续使用直接调用即可 `process.env.CHECK_AUTH`
 
