--- a/_posts/算法、刷题/2025-03-07-p-limit 使用+源码 、100个请求并发请求、分时操作.md
+++ b/_posts/算法、刷题/2025-03-07-p-limit 使用+源码 、100个请求并发请求、分时操作.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      p-limit 使用+源码 、100个请求并发请求
+title:      p-limit 使用+源码 、100个请求并发请求、分时操作
 subtitle:  
 date:       2025-03-07
 author:     
@@ -14,7 +14,7 @@ typora-root-url: ..
 
 
 
-## p-limit 使用+源码 、100个请求并发请求
+## p-limit 使用+源码 、100个请求并发请求、分时操作
 
 记录一个有趣的面试题目(来源pingpong)
 
@@ -166,20 +166,37 @@ execute(requests).then(res => {
 })
 ```
 
-—— 分时函数：将操作分批执行
+#### 4、分时函数：将操作分批执行
+
+功能：分批处理数组元素的工具函数
+
+- 适用于需要分批处理数组元素的场景，尤其是在处理大量数据时，可以避免一次性处理过多数据导致的性能问题
+
+定义 ： 在指定的时间间隔内，每次从数组中取出一定数量的元素，并通过回调函数 `fn` 进行处理。当数组中的所有元素都被处理完毕后，定时器会被清除
+
+参数说明：
+
+- array 需要处理的数据
+- fun 处理数组元素的回调函数
+- count 每次处理数组元素的数量
+
+返回值说明：
+
+- 返回的函数是一个闭包，它启动一个定时器，每隔 200 毫秒调用一次 `start` 函数
+
+我觉得写得特别好的地方：`Math.min(count || 1, arr.length)`  - 确保每次处理的元素数量不超过数组的剩余元素数量，且至少处理一个元素
 
 ```js
-// 参数说明：array-需要的数据，fun-操作数据的函数，count-数量限制
 function timeChunk(array, fun, count) {
-    let timeId; // 闭包存储起来
+    let timeId;
     const start = function() {
-        for(let i = 0; i < Math.min(count || 1, array.length); i++) { // 数量限制
-            fn(array.shift()); // 闪光点：Math.min(count || 1, array.length)
+        for(let i = 0; i < Math.min(count || 1, array.length); i++) {
+            fn(array.shift()); // 取出最多 count 个元素，并通过 fn 进行处理
         }
     }
     return () => {
         timeId = setInterval(() => {
-            if(array.length === 0){ // 全部节点创建完毕
+            if(array.length === 0){ // 全部数据处理完毕
                 return clearInterval(timeId)
             }
             start();
