LTN②〇：41h51m = LTN 96题 + 错题重做65

--- a/_posts/重构2/2025-03-17 -《JS 设计模式》Part1 基础知识.md
+++ b/_posts/重构2/2025-03-17 -《JS 设计模式》Part1 基础知识.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     Part1 基础知识
+title:     Part1 设计模式、底层理念、惰性加载函数
 subtitle:  
 date:       2025-03-17
 author:     
@@ -13,13 +13,13 @@ typora-root-url: ..
 
 
 
-# Part1 基础知识
+# Part1 设计模式、底层理念、惰性加载函数
 
 总结：
 
 - 设计模式：一种取了名的设计经验的复用 - 复用性、维护性高
-- 设计模式的底层原则：封装变化[谁去做、怎么做]，复用不变的[做什么]
-- 常见的高阶函数
+- 底层理念：封装变化[谁去做、怎么做]，复用不变的[做什么]
+- 惰性加载函数：第一次加载时执行一次后内部重写当前函数，之后就不需要重复计算了
 
 
 
