fix: 优化惰性加载函数的理解和实现

--- a/_posts/重构2/2025-03-17 -《JS 设计模式》Part1 基础知识.md
+++ b/_posts/重构2/2025-03-17 -《JS 设计模式》Part1 基础知识.md
@@ -18,8 +18,45 @@ typora-root-url: ..
 总结：
 
 - 设计模式：一种取了名的设计经验的复用 - 复用性、维护性高
+
 - 底层理念：封装变化[谁去做、怎么做]，复用不变的[做什么]
-- 惰性加载函数：第一次加载时执行一次后内部重写当前函数，之后就不需要重复计算了
+
+- 惰性加载函数
+
+    - 惰性求值：延迟计算值或者执行函数，第一次访问时才计算并缓存结果，后续直接返回缓存。核心是第一次计算后缓存结果。场景如计算昂贵操作、单例模式、函数记忆化
+    - 惰性加载：延迟加载资源(js、图片)，直到真正需要时才加载。核心是按需加载资源。场景如动态 import、图片懒加载、路由按需加载
+
+    ```js
+    // 惰性求值
+    function lazyCompute() {
+        const res = expensive();
+        lazyCompute = () => res;
+    	return res;
+    }
+    // 惰性加载 - 延迟计算昂贵操作
+    function createLazyFn(fn) {
+        let cache;
+        let isComputed = false;
+        return (...args) => {
+            if(!isComputed) {
+                cache = fn(...args); // 第一次计算时调用
+                isComputed = true;
+            }
+            return cache
+        }
+    // 惰性加载 - 动态 import
+    function lazyLoad(path) {
+        let promise;
+    	return () => {
+            if(!promise) {
+                promise = import(path);
+            }
+            return promise
+        }
+    }
+    ```
+
+    
 
 
 
