test: 暂存，尝试使用手机做 LTN 题目

--- a/_posts/重构2/2025-03-17 -《JS 设计模式》Part1 基础知识.md
+++ b/_posts/重构2/2025-03-17 -《JS 设计模式》Part1 基础知识.md
@@ -23,8 +23,8 @@ typora-root-url: ..
 
 - 惰性加载函数
 
-    - 惰性求值：延迟计算值或者执行函数，第一次访问时才计算并缓存结果，后续直接返回缓存。核心是第一次计算后缓存结果。场景如计算昂贵操作、单例模式、函数记忆化
-    - 惰性加载：延迟加载资源(js、图片)，直到真正需要时才加载。核心是按需加载资源。场景如动态 import、图片懒加载、路由按需加载
+    - 惰性求值：延迟计算值或者执行函数，第一次访问时才计算并缓存结果，后续直接返回缓存。**核心是第一次计算后缓存结果**。场景如计算昂贵操作、单例模式、函数记忆化
+    - 惰性加载：延迟加载资源(js、图片)，直到真正需要时才加载。**核心是按需加载资源**。场景如动态 import、图片懒加载、路由按需加载
 
     ```js
     // 惰性求值
