--- a/_posts/2025-2-10-LTN②〇.md
+++ b/_posts/2025-2-10-LTN②〇.md
@@ -15,18 +15,12 @@ typora-root-url: ..
 
 ### LTN②〇
 
-❌2025-03 约瑟夫问题变种 - 标准解法+批量删除解法
-❌2025-03 最大化最小间隔
-❌作业102： AOP 是什么
+-❌作业102： AOP 是什么？作用是什么？核心关键词：切面、切入点、通知、织入分别是什么含义并举例
 ❌2025-03 Part1 设计模式、底层理念、惰性加载函数
-❌作业66：React如何处理错误
-❌2019.07 css中的动画特性可以用js实现，那为什么还要用css来实现？
-❌2024-12 Nestjs 核心特性、基本概念、生命周期、获取请求和响应、不同组件的实现和执行顺序
-❌作业62：fiber架构是什么？优点和实现方式？
-❌作业68：React hooks 的作用和原理是什么？useEffect useState模拟实现
--❌2020.07 对象分类、Promise按序执行、实现map
-❌2021-07 常见Webpack问题
-❌作业33：Cookie 怎么设置有效期？有优先级吗？HttpOnly 是什么含义？
+✅2019.07 css中的动画特性可以用js实现，那为什么还要用css来实现？
+-✅2024-12 Nestjs 核心特性、基本概念、生命周期、获取请求和响应、不同组件的实现和执行顺序
+✅作业62：fiber架构是什么？优点和实现方式？
+✅2021-07 常见Webpack问题
 
 
 
@@ -35,5 +29,213 @@ typora-root-url: ..
 - 当被问到项目中使用的技术栈时，不要只是简单地列出技术名称，而是要阐述选择这些技术的原因【如何根据项目的需求、团队的技术背景、市场趋势等因素进行综合考虑的。例如，为什么选择 React 而不是 Vue，为什么使用 Nextjs 而不是传统的 React 项目架构】【在项目中解决问题的能力和过程】
 - 从业务角度分析项目需求【理解项目的目标用户、业务流程和功能需求，思考如何通过技术来实现业务价值】【当遇到技术难题或业务需求变更时，你是如何分析问题、寻找解决方案并实施的。可以分享一些具体的问题案例，以及你采取的解决措施和最终的效果】
 
+>工具推荐周期：3.28-4.6 10天
+>
+>共计 118 题
 
+LTN1 【推荐做题时间 03-24 - 7题 实际做题时间： ？】
+2025.02 TS - dayjs 引入但失效问题
+2025.02 docker-compose 的配置管理 context 
+2022-10 TS 泛型函数/泛型接口/泛型约束、特性、type/keyof/enum/as/Partial
+2025-03 浏览器前端性能优化RAIL
+2025-03 js执行优先级 + 测试题
+2025-03 TCP 滑动窗口 VS TCP 排队
+作业101：什么是 JS 的一等对象？还有哪些一等对象
+
+LTN1 【推荐做题时间 03-25 - 2题 实际做题时间： ？】
+作业82：写一个复杂的 SQL： ①只返回某列不同的值，相同的忽略 ②拼接A列和B列为字符串后输出 ③将某一列转换为大写输出 ④计算某列行数，一个包含null的个数，一个不包含null个数 ⑤求和、求最大、求最小、求平均某列的值 ⑥给表起别名 ⑦查询条件涵盖 id为1,同时price大于10，或者是NULL，或者是 5-10之间，或者是 1或2，或者年份为2025 ⑧按照某列分组 ⑨按照某列排序(降序)
+作业86：Nextjs 中 Link 的变更是哪个版本开始的，有什么变更？从这个版本开始对路由有什么变更？
+
+LTN1 【推荐做题时间 03-26 - 3题 实际做题时间： ？】
+2021.04 12 垃圾回收机制
+2025-03 服务器 不明文密码处理
+2023-09 二叉树：前中后序、层序遍历-递归/非递归版本、层序遍历、路径和
+
+LTN1 【推荐做题时间 03-27 - 3题 实际做题时间： ？】
+2021-07 给DOM元素绑定事件
+2024-11 数组乱序 洗牌算法 从最后一个元素开始，从数组中随机选出一个位置，交换，直到第一个元素。
+2025.02 Express VS KOA2
+
+LTN1 【推荐做题时间 03-28 - 4题 实际做题时间： ？】
+2021.07 数组扁平化（一层、全部展开、指定深度）
+2025-3 NextJS 全局中间件-校验权限
+2025-3 NestJS 守卫-校验权限
+2025-03 p-limit 使用+源码 、100个请求并发请求、分时操作
+
+LTN1 【推荐做题时间 03-29 - 2题 实际做题时间： ？】
+作业74：起舞弄清影 是那首诗？谁写的？下一句是什么？
+2025-03 方法的泛化/方法的借用
+
+LTN2 【推荐做题时间 03-29 - 1题 实际做题时间： ？】
+2025-03 Promise 的异步任务并发函数
+
+LTN4 【推荐做题时间 03-29 - 2题 实际做题时间： ？】
+2021.05 29 WebSocket
+2021.05 XSS跨域脚本攻击 和 CSRF跨站请求伪造攻击
+
+LTN5 【推荐做题时间 03-29 - 1题 实际做题时间： ？】
+2024-09 第六章 集合引用类型 小结
+
+LTN1 【推荐做题时间 03-30 - 1题 实际做题时间： ？】
+作业79：地球四季的成因是什么？
+
+LTN2 【推荐做题时间 03-30 - 2题 实际做题时间： ？】
+作业94：Nextjs fetch 为什么接口查询之后，一般都要使用 .json() 来转化一次数据后再返回？sequelize findAll/findOne 可以通过传递参数获取 js 格式的数据
+作业 96：Sequelize 中 Date 的怪问题 - POST 存储 DATE 类型，GET 传参数2025-01-27 STRING，无法直接查询，有那些性能高的查询方法？索引是什么，为什么性能高？
+
+LTN4 【推荐做题时间 03-30 - 1题 实际做题时间： ？】
+2020.03 模块化
+
+LTN1 【推荐做题时间 03-31 - 8题 实际做题时间： ？】
+作业72：react 的 声明周期有哪些，在不同生命周期中做什么事情？
+作业88：mysql2 和 Sequelize 的使用场景？有哪些差异？简单写一个连接
+作业93：闭包的作用和原理
+作业98：sequelize 怎么写关联表的查询，指定关联的 column 是date
+2025.02 Mysql 8.0 以上，Sequel报插件错
+2025.02 Nextjs 获取链接中的参数
+2025.02 sequelize 在 Nestjs 中的 env 配置
+作业102： AOP 是什么
+
+LTN2 【推荐做题时间 03-31 - 4题 实际做题时间： ？】
+作业36：多分支项目的大致情况
+作业37：大盘的大致情况
+2021-04 01 浏览器进程组成 + 复用渲染进程 + 进程/线程
+作业38：部署两个项目的大致情况
+
+LTN3 【推荐做题时间 03-31 - 6题 实际做题时间： ？】
+作业2：支持迭代器的原生语言特性有哪些？
+2019.07 为什么要清除浮动？怎么清除浮动？
+作业45：原生+canvas 显示一张png格式的图片
+2024.10 第十四章-第十五章 DOM、DOM扩展
+2024.12 模拟实现instanceof
+2019.07 h5新标签和语义化，块/行内元素
+
+LTN1 【推荐做题时间 04-01 - 3题 实际做题时间： ？】
+2025-03 约瑟夫问题变种 - 标准解法+批量删除解法
+2025-03 自定义运算符优先级计算 #>$
+2025-03 最大化最小间隔
+
+LTN2 【推荐做题时间 04-01 - 5题 实际做题时间： ？】
+作业20：浏览器打开一个 URL 发生了什么
+2021.09 Object属性排序、与Map的区别
+2021.07 防抖节流
+作业80：对DOM 树的理解 - 定义和作用
+作业84：path.join()和path.resolve()的区别？process.cwd()和__dirname的区别？
+
+LTN1 【推荐做题时间 04-02 - 2题 实际做题时间： ？】
+作业66：React如何处理错误
+2025-03 Part1 设计模式、底层理念、惰性加载函数
+
+LTN2 【推荐做题时间 04-02 - 1题 实际做题时间： ？】
+2021.06 flex布局
+
+LTN3 【推荐做题时间 04-02 - 3题 实际做题时间： ？】
+2024.12 模拟实现jsonp
+作业83：INNER JOIN、LEFT OUTER JOIN、RIGHT OUTER JOIN 有什么区别?UNION作用是什么？怎么封装一个 SQL 查询
+作业4：什么是生成器？有什么作用？
+
+LTN4 【推荐做题时间 04-02 - 10题 实际做题时间： ？】
+作业65： ①computed/watch/methods 的区别？ ②父子组件挂载顺序 ③vue组件中的data为什么是函数 ④ 常见生命周期
+作业71：React为什么要合成事件？和原生事件有什么不同？
+作业78：使一个标签看不见的几种样式及其区别
+作业47：2D绘图上下文（坐标原点、基本操作、唯一形状）和3D上下文（坐标原点、定义视口）
+作业53：胜利者一无所获 说的是什么
+作业13：什么是原型链？原型链继承、组合继承、寄生组合式继承，分别有什么优缺点？分别是怎么实现的
+作业85：Lambdas是什么
+2024.05 rem是基于什么原理进行适配的？
+2021.04 05-3 白屏优化？
+作业75：React 组件代码表达的是什么？hook怎么写才好，自定义hook会共享状态么？组件和hook的返回值有什么不同？在渲染时，他们是怎么个顺序？
+
+LTN1 【推荐做题时间 04-03 - 7题 实际做题时间： ？】
+作业62：fiber架构是什么？优点和实现方式？
+作业68：React hooks 的作用和原理是什么？useEffect useState模拟实现
+2020.07 对象分类、Promise按序执行、实现map
+2019.07 css中的动画特性可以用js实现，那为什么还要用css来实现？
+作业33：Cookie 怎么设置有效期？有优先级吗？HttpOnly 是什么含义？
+2021-07 常见Webpack问题
+2024-12 Nestjs 核心特性、基本概念、生命周期、获取请求和响应、不同组件的实现和执行顺序
+
+LTN2 【推荐做题时间 04-03 - 5题 实际做题时间： ？】
+作业23：写出js 代码的执行顺序。词法作用域的特点是什么？ \nfunction bar(){
+console.log(myName);\n}\nfunction foo(){
+var myName = 'hi 坑';
+bar();\n}\nvar myName = 'bye 坑';\nfoo();\n--\nvar name = \"global name\";\nvar obj = {
+name: 'Alice',
+getName: function() { console.log(this.name) }\n}\nvar getName = obj.getName;\ngetName();\n--\n—-\n(function(){
+try{
+ console.log(1, a); // undefined
+ var a=\"a\";
+ console.log(a); // 'a'
+ b(); // 'b'
+ c(); // Error
+ function b(){
+  console.log(\"b\");
+ }
+ var c=function(){
+  console.log(\"c\");
+ }
+ console.log(\"d\") // 没有被执行
+}catch(e){
+ console.log('err')
+}\n})()
+作业63：React渲染怎么实现的？涉及到哪些生命周期/hooks？以 const [count, setCount]=useState(0)具体说明
+2024.12 模拟实现promise
+2025.02 nextTick 原理，在Vue2、Vue3中分别是什么步骤实现的，简单模拟实现流程
+2025-02 KOA2 中间件机制实现、路由处理、错误处理、模版引擎、源码
+
+LTN5 【推荐做题时间 04-04 - 1题 实际做题时间： ？】
+作业41：TED 如何解决焦虑
+
+LTN2 【推荐做题时间 04-05 - 2题 实际做题时间： ？】
+作业87：Nextjs 中预渲染是什么？有哪些模式？写一个动态路由的page
+作业92：前端中的序列化是什么？常见序列化方法。反序列化是什么？有哪些方法。写个POST调用流程
+
+LTN3 【推荐做题时间 04-05 - 13题 实际做题时间： ？】
+作业40：写出以下值\n1、Number(null)\n2、Number(undefined)\n3、isNaN() 检测那些值为 true?\n4、Number、parseInt、parseFloat 检测 空字符串 得到?\n5、1+'2'+'2'\n1+ +'2'+'2'\n1+ -'1'+'2'\n'A'-'B'+'2'\n'A'-'B'+ 2\n6、let i = 0, age = 30;\ni++ + age;\n++i + age;\n7、 12.34 | 0;\n12.43 >> 0;\n8、null === undefined；
+作业32：什么是队头阻塞？原因是什么？怎么解决？
+作业30：简单写出一个请求头和响应头。HTTP/1.1中唯一要求请求头必须提供？写出常见状态码
+2019.07 引用css，link和@import的区别
+作业1：写一个只能被迭代指定次数的类
+作业11：写出一个用 yield 实现的递归算法，从0数到指定n
+作业 89：mysql 中类型的区别：varchar 和 char，date datetime
+2024-11 第十九章 表单脚本
+2024-10 第十二章 BOM 小结
+2024-09 第七章 迭代器与生成器 小结
+2019-06 第五章 基本引用类型 小结
+作业95：唯一索引什么作用？Sequelize 中 define modal 的时候，怎么创建组合字段唯一索引？SQL怎么写？updateOnDuplicate 是什么作用？怎么配合唯一索引。 define 中的第三个参数中常见配置
+作业100：写一个原生的 form ，写出两个提交表单的方式 + 阻止提交方式，表单字段的公共属性/方法，怎么校验表单
+
+LTN6 【推荐做题时间 04-05 - 2题 实际做题时间： ？】
+作业7：原始值包装类型和原始类型在使用 typeof 和 instanceof 进行类型判断时，有什么异同？
+作业9：数组自带排序 sort() 为什么经常要传比较函数？写一个降序的比较函数。如果数组元素全是数值，请给出简写形式
+
+LTN2 【推荐做题时间 04-06 - 8题 实际做题时间： ？】
+作业17：对斐波那切数列进行尾调用优化
+作业70：Vue 和 React 的 Diff 算法比较
+2024.10 怎么实现跨域
+2019.10 两栏，左边固定，右边自适应的布局
+作业48： input 和 textarea 对比（宽度设置，初始值设置）；option 标签的初始值设置
+作业51： 如何停止过度思考？如何停止焦虑
+作业97：Sequelize 中查找某条数据，如果存在就更新；不存在就创建一条
+69 x 的平方根
+
+LTN3 【推荐做题时间 04-06 - 7题 实际做题时间： ？】
+作业81：Redux 核心是什么？reducer、action、dispatch、store、RTK 怎么理解？简单写一个 redux 使用
+2023.07 clickhouse、mysql、mongodb异同
+2019.07 显示省略号
+2021.06 子盒子在父盒子中水平垂直居中有几种方法？
+作业10：说出WeakMap/WeakSet和Map、Set的区别，为什么有这两个弱类型，经常用在什么场景
+2021.07 12-1 内存泄漏
+作业99：渲染合成层定义、触发方式、优点、缺点
+
+LTN6 【推荐做题时间 04-06 - 2题 实际做题时间： ？】
+作业12：画出一个原型链，到 null 为止
+作业8：ES6新增了两个创建数组的静态方法：Array.from()和Array.of()两个有什么区别？
+
+------
+
+做题记录
+
+```
+```
 
