fix: MDN check js 执行优先级

--- a/_posts/算法、刷题/2025-03-10-js执行优先级 + 测试题.md
+++ b/_posts/算法、刷题/2025-03-10-js执行优先级 + 测试题.md
@@ -16,7 +16,30 @@ typora-root-url: ..
 
 ## js执行优先级 + 测试题
 
-执行优先级由高到低：**小括号(xxx)  >  属性访问.   > new foo 无参数 >  函数调用foo() > new foo()  带参数**
+参考链接：[mdn 优先级操作符](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Operators/Operator_precedence)
+
+执行优先级由高到低：
+
+19 优先级 
+
+- 分组：(…)
+
+18 优先级
+
+- 成员访问 a.b
+
+	 - 需计算的成员访问  a[b]
+	 - new 带参数列表 new foo()
+	 - 函数调用 fun(a)
+	 - 可选链 a?.b
+
+17 优先级
+
+- new 无参数列表 new foo
+
+​	
+
+**小括号(xxx)  >  属性访问.   > new foo() 带参数 >  函数调用foo() > new foo  无参数**
 
 ```javascript
 function getName(){ console.log(1) }
